--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "lenis": "^1.1.20",
     "motion": "^12.0.6",
     "next": "15.1.6",
     "react": "^19.0.0",
